test/libhyperion/syntaxTests/types/address/address_literal_to_payable_err.hyp
contract C {
    function f() public pure {
        address payable a = address(Z00000000219ab540356cBB839Cbe05303d7705Fa);
        address payable b = Z00000000219ab540356cBB839Cbe05303d7705Fa;
    }
}
// ----
// TypeError 9574: (52-122): Type address is not implicitly convertible to expected type address payable.
// TypeError 9574: (132-193): Type address is not implicitly convertible to expected type address payable.
